@@ -18,55 +18,80 @@ package com.sdp.poc.threading.core;
 import com.sdp.poc.threading.base.config.Props;
 import com.sdp.poc.threading.base.msg.Logger2;
 import com.sdp.poc.threading.base.msg.QLogger;
-import com.sdp.poc.threading.config.Commarea;
+import com.sdp.poc.threading.config.CAMotor;
 import com.sdp.poc.threading.interfaces.ICommarea;
-import com.sdp.poc.threading.interfaces.IConsumer;
-import com.sdp.poc.threading.interfaces.IProducer;
+import com.sdp.poc.threading.interfaces.IMTConsumer;
+import com.sdp.poc.threading.interfaces.IMTProducer;
 
 import java.util.Properties;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
+import java.util.concurrent.PriorityBlockingQueue;
 
 public class Motor {
     CountDownLatch latch    = null;
     ExecutorService executor = null;
-    ICommarea commarea;
-    Commarea MT;
-    String propsPreffix = null;
+    CAMotor ca;
 
-    public Motor() {}
-    public Motor(String label) {
-        this.propsPreffix = label;
+    public Motor() { this(null, null, null); }
+    public Motor(String file) {
+        this(file, null, null);
     }
+    public Motor(String file, String label) {
+        this(file, label, null);
+    }
+    public Motor(Properties custom) {        this(null,null,custom);    }
+    public Motor(String fConfig, String label, Properties custom) {
+        ca = CAMotor.getInstance();
+        String fname = "mt.properties";
+        if (fConfig != null) {
+            fname = fConfig;
+            if (fConfig.indexOf('.') == -1) fname = fname + ".properties";
+        }
+        loadPropsData(Props.load(fname), label);
+        loadPropsData(custom, null);
+    }
+
     public void run(ICommarea commarea, Class prodClass, Class consClass) {
-        initCommarea(commarea);
-        MT = (Commarea) commarea;
+
 
         Thread thTimer = null;
         Thread thLog = null;
 
+        // Sumamos el productor
         int threads = commarea.getNumThreads();
         latch = new CountDownLatch(threads);
         executor = Executors.newFixedThreadPool(threads);
+
+        PriorityBlockingQueue<Long> q = ca.getQueue();
 
         try {
             thLog = startLogger();
             thTimer = startTimer();
 
             // Arrancamos los consumidores
-            for (int i = 0; i < commarea.getNumThreads(); i++) {
-                IConsumer cons = (IConsumer) consClass.getConstructor(CountDownLatch.class).newInstance(latch);
-                executor.execute(cons); // Consumers
+            for (int i = 0; i < ca.getNumThreads(); i++) {
+                IMTConsumer icons = (IMTConsumer) consClass.getConstructor().newInstance();
+                MTConsumer  consumer = new MTConsumer(latch, icons);
+                executor.execute(consumer); // Consumers
             }
-            executor.shutdown();          // No mas hilos
 
-            // Se inicia el productor en este hilo
-            IProducer prod = (IProducer) prodClass.newInstance();
-            prod.run();
+            IMTProducer iprod = (IMTProducer) prodClass.getConstructor().newInstance();
+            Thread thrProd = new Thread(new MTProducer(iprod));
+            thrProd.start();
+            thrProd.join();
+
+//            IMTProducer iprod = (IMTProducer) prodClass.getConstructor().newInstance();
+//            MTProducer  producer = new MTProducer(latch, iprod);
+//            executor.execute(producer); // Consumers
+
+
 
             // Notificar que acaben
-            for (long l = 0; l < commarea.getNumThreads(); l++) commarea.getQDat().put(MT.ENDT);
+            for (long l = 0; l < ca.getNumThreads(); l++)
+                q.put(CAMotor.ENDT);
+            executor.shutdown();          // No mas hilos
             latch.await();
 
             if (commarea.getTimeout() > 0) { // Si habia timer, ha acabado antes de tiempo. Pararlo
@@ -74,7 +99,7 @@ public class Motor {
                 thTimer.join();
             }
 
-            commarea.getQLog().put(MT.ENDS);
+            commarea.getQLog().put(CAMotor.ENDS);
             thLog.join();
 
         } catch (InterruptedException ex) {
@@ -90,30 +115,24 @@ public class Motor {
         Thread log = new Thread(new LoggerCons());
         log.setName("Logger");
         log.start();
-        QLogger.setQueue(commarea.getQLog());
+        QLogger.setQueue(ca.getQLog());
         return log;
     }
     // Arranca el monitor de tiempo
     public Thread startTimer() {
-        if (commarea.getTimeout() == 0) return null;
-        Thread thr = new Thread(new Timer(Thread.currentThread(), (Commarea) commarea));
-        thr.setName("Timer");
+        if (ca.getTimeout() == 0) return null;
+        Thread thr = new Thread(new Timer("Timer", Thread.currentThread(), ca));
         thr.start();
         return thr;
     }
-
-    private void initCommarea(ICommarea comm) {
-        this.commarea = comm;
-        loadPropsData(Props.load("mt.properties"), "propsPreffix");
-        loadPropsData(commarea.getCustomProps(), null);
-    }
     private void loadPropsData(Properties props, String prfx) {
+        if (props == null) return;
         String value = "";
         try {
-            value = props.getProperty(propsPreffix == null ? "threads" : propsPreffix + ".threads");
-            if (value != null) commarea.setNumThreads(Integer.parseInt(value));
-            value = props.getProperty(propsPreffix == null ? "timeout" : propsPreffix + ".timeout");
-            if (value != null) commarea.setTimeout(Integer.parseInt(value));
+            value = props.getProperty(prfx == null ? "threads" : prfx + ".threads");
+            if (value != null) ca.setNumThreads(Integer.parseInt(value));
+            value = props.getProperty(prfx == null ? "timeout" : prfx + ".timeout");
+            if (value != null) ca.setTimeout(Integer.parseInt(value));
         } catch (NumberFormatException ex) {
             Logger2.warning("Ignorado valor del atributo no numerico: " + value);
         }
